--- a/restaurant_/src/main/resources/application.properties
+++ b/restaurant_/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Restaurant
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant
+spring.datasource.url=jdbc:postgresql://localhost:5432/here enter your database name
 spring.datasource.username=postgres
-spring.datasource.password=Marko1306#
+spring.datasource.password=// here enter your password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
